project/logs/20250625_171424log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel:12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:42:15: error: redefinition of 'cos'
        float cos = pow(Ndotl * 0.5f + 0.5f, 2.0f);
              ^
Object3D.PS.hlsl:39:15: note: previous definition is here
        float cos = saturate(dot(normalize(input.normal), -gDirectionalLight.direction));
              ^

